--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </p>
         <p>
 
-            Régen a tülkölő, kereplő, kolompot rázó és "bao-bao-bao!"-t ordítozó busócsoportok tulajdonképpeni célja az
+            Régen a tülkölő, kereplő, kolompot rázó és <q>bao-bao-bao!</q>-t ordítozó busócsoportok tulajdonképpeni célja az
             volt, hogy házról-házra járva kifejezze jókívánságait,
             elvégezze varázslatait és részesüljön azokban az étel-ital adományokban, amiket sehol sem tagadtak meg
             tőlük.
